Bug 1368738 - Use GetSpecIgnoringRef() in GetPrincipalSpec() in all protocols. r=aceman